--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/ssr": "^19.2.3",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "schematics-scss-migrate": "^2.3.17",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
